Fix safari bugs (scrollbar, mainmenu-margin)

--- a/src/components/left/foldersMenu/FoldersMenu.scss
+++ b/src/components/left/foldersMenu/FoldersMenu.scss
@@ -46,11 +46,18 @@
 
     .DropdownMenu {
       justify-items: center;
+
+      .Button {
+        // Safari fix (auto right margin)
+        margin-left: auto;
+        margin-right: auto;
+      }
     }
 
     .animated-menu-icon {
       opacity: 0.7;
       justify-self: center;
+
       &,
       &::before,
       &::after {
