--- a/src/components/main/Main.scss
+++ b/src/components/main/Main.scss
@@ -47,7 +47,7 @@
 
   @media (min-width: 1276px) {
     --left-column-min-width: 25rem;
-    --left-column-max-width: 25vw;
+    --left-column-max-width: 30vw;
   }
 
   @media (max-width: 925px) {
